# python_projects

./: README.md
Ball/: Ball.py
Chess/bot/: board.py  game.py  main.py  piece.py  pieceImages.py  test.py
Chess/bot/chessApi/: board.c  board.h  compile_cmd.txt  main.exp  main.lib  pymodule.c  rules.c
Chess/chessApi/: CMakeLists.txt  Makefile  board.c  board.h  botBrain.c  botBrain.h  compile_cmd.txt  debug.c  pieces.c  pieces.h  pymodule.c  pymodule.exp  pymodule.lib  rules.h  setup.py
Chess/tmp/: main.py  pieceValues.txt
DAT200/Ovinger/: Oving2.py
DAT200/Ovinger/Oving3/: 1.py  2.py  2_test.py  3.py  4.py
DAT200/Test/: main.py
Oving10/: kulebane.py  main.py
Pathfinder/: graph.py  main.py  map.txt
Pathfinder/c_prgms/: CMakeLists.txt
Pathfinder/c_prgms/dijkstra/: dijkstra.c  dijkstra.cp38-win32.pyd  setup.py  test.py  tmp.c
Pathfinder/c_project/: CMakeLists.txt  library.h  myModule.c  myModule.cp38-win32.pyd  setup.py  test.py
Pathfinder/grafer/: aktivitetsgraf.py  bellman_ford.py  bredde_forst_sok.py  demograf.py  demograf_ikke_rettet.py  dijkstra.py  dybde_forst_sok.py  emnegraf.py  graf_adt.py  graf_matrise.py  graf_naboliste.py  minimale_spenntraer.py  test.py  topologisk_sortering.py
Pathfinder/prioritetskoer/: binaerhaug.py  huffmankoder.py  liste_prioritetskoe.py  passkontroll.py  prioritetsko_adt.py  test.txt
Pathfinder/test/: cprgm.c
Sjakk/: Sjakk.py
Snake/: figs.py  highscorefun.py  highscores.txt  items.py  main.py  main.spec  myfuncs.py  play.py  players.py  test.py  test2.py
Sudoku/: main.py  utils.py
Tetris/: funcs.py  highscores.txt  main.py
guess_pic/: main.py
